http-svc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: s3.dailyanimalpics.com
    http:
      paths:
      - path: /minio/test01/
        backend:
          serviceName: http-svc
          servicePort: 8080
      - path: /
        backend:
          serviceName: ingress-default-backend
          servicePort: 8080
